--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
     <body>
-        <h1>Hello Microverse!</h1>
+        <h1 class="header">Hello Microverse!</h1>
     </body>
 </html>
