Added DOCTYPE, meta, and title tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="eng">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <Title>Hello Microverse</Title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
